# moodle-mcp

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
deploy/: README.md
deploy/moodle/: Dockerfile  SETUP.md  entrypoint.sh  php.ini
deploy/proxy/: Caddyfile
docs/: architecture-diagrams.md  production-readiness.md
services/agents/: .env.example  Caddyfile  Dockerfile  docker-compose.yml
services/mcp/: .env.example  Caddyfile  Dockerfile  docker-compose.yml
services/moodle/: .env.example  Caddyfile  Dockerfile  docker-compose.yml
src/moodle_mcp/: __init__.py  agent.py  api.py  config.py  mcp_client.py  mcp_server.py  tools.py
src/moodle_mcp/adk/: __init__.py  agents.py  moodle_tools.py  orchestrator.py  runtime.py  skills.py
src/moodle_mcp/moodle/: __init__.py  client.py
tests/: test_adk_skills.py  test_moodle_client.py  test_tools.py
web/: index.html  main.js  styles.css
