[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "moodle-mcp"
version = "0.1.0"
description = "Google ADK agent with MCP tools for Moodle."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "mcp>=1.2",
  "openai>=1.59",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "respx>=0.21",
  "ruff>=0.8",
]
adk = [
  "google-adk>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
